--- a/30_Whack_A_Mole/style.css
+++ b/30_Whack_A_Mole/style.css
@@ -67,3 +67,10 @@ h1 {
 .hole.up .mole {
   top: 0;
 }
+
+.timer {
+  text-align: center;
+  font-size: 10rem;
+  font-weight: bold;
+  margin-top: 5rem;
+}
